crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/absolute_target_matches_plugin_globs.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `/project/biome.json`

```json
{
  "plugins": [
    { "path": "./rule.grit", "includes": ["src/**/*.ts"] },
    { "path": "./rule.grit", "includes": ["/project/src/**/*.ts"] },
    { "path": "./rule.grit", "includes": ["**/*.ts", "!**/*.test.ts"] },
    {
      "path": "./rule.grit",
      "includes": ["**/*.ts", "!**/*.test.ts", "**/keep.test.ts"]
    }
  ],
  "overrides": [
    {
      "includes": ["src/**/*.ts"],
      "plugins": [{ "path": "./rule.grit", "includes": ["src/**/*.ts"] }]
    }
  ]
}
```

## `/project/src/biome.json`

```json
{ "root": false, "plugins": ["./nested.grit"] }
```

## `biome.json`

```json
{ "plugins": ["./wrong.grit"] }
```

## `/project/rule.grit`

```grit
`unterminated
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 rule resolved.
  
  Target path: /project/src/file.ts
  
  Local plugins
  
  - rule ((includes: [/project/src/**/*.ts]) or (includes: [**/*.ts, !**/*.test.ts]) or (includes: [**/*.ts, !**/*.test.ts, **/keep.test.ts]))
  

```
