crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/config_relative_resolution_errors_stop_configuration_loading.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "plugins": [{ "path": "missing-package/rule", "resolutionKind": "config" }] }
```

# Termination Message

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Error(s) during loading of plugins:
    Failed to resolve plugin package missing-package from 
  


```
