crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/help.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome inspect plugins --help
```

# Emitted Messages

```block
Lists the plugin rules enabled by the configuration, grouped by plugin.
Each rule shows whether the configuration lists it directly or through a preset. Rules that apply
only to some files are listed separately with their `includes` globs. Biome locates the plugin files
but doesn't compile or run them, so this command doesn't report syntax errors or runtime failures.

Usage: inspect plugins [--path=PATH]

Available options:
        --path=PATH  Lists only the rules that apply to this file, based on `overrides` and plugin
                     `includes`. Nested configuration files and ignore files are not considered.
    -h, --help       Prints help information

```
