crates/biome_cli/tests/snapshots/main_commands_inspect_plugins/invalid_grit_resolves_human.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## `biome.json`

```json
{ "plugins": ["./rules/../rules/invalid.grit"] }
```

## `file.js`

```js
  debugger
```

## `rules/invalid.grit`

```grit
`unterminated
```

# Emitted Messages

```block
configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i 1 rule resolved.
  
  Local plugins
  
  - invalid
  

```
